--- a/templates/_layouts/main.html
+++ b/templates/_layouts/main.html
@@ -1,11 +1,12 @@
 <html lang="en">
 	<head>
-		{{ block "data" . }}{{ end }}
-		{{ if ne .env.ENVIRONMENT "development" }}
-			{{ block "favicons" . }}{{ end }}
-		{{ end }}
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-		<link rel="stylesheet" type="text/css" href="/static/styles/main.css"></link>
+		<title>{{ .Title }}</title>
+		<meta name="description" content="" />
 	</head>
 
 	<body data-no-js="true">
@@ -28,12 +29,5 @@
 		<footer>
 			<p>&copy; {{ now }} Trevor Plassman</p>
 		</footer>
-
-		<script src="/static/scripts/main.js"></script>
-
-		{{ if eq .env.ENVIRONMENT "development" }}
-			<!-- LiveReload server -->
-            <script>document.write('<script src=\"http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1\"></' + 'script>')</script>
-		{{ end }}
 	</body>
 </html>
